--- a/notebooks/data_loading_and_preprocessing.ipynb
+++ b/notebooks/data_loading_and_preprocessing.ipynb
@@ -2,31 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-23T11:08:34.970715Z",
-     "start_time": "2024-03-23T11:08:32.803134Z"
+     "end_time": "2024-03-27T08:42:30.908577Z",
+     "start_time": "2024-03-27T08:42:30.906488Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import datetime\n",
     "import spacy\n",
     "import re\n",
-    "import torch\n",
-    "import pickle\n",
-    "import torch.optim as optim\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch.nn.functional as F\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from gensim.models import Word2Vec"
+    "import pickle"
    ]
   },
   {
@@ -39,12 +29,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T11:08:35.455488Z",
-     "start_time": "2024-03-23T11:08:34.972056Z"
+     "end_time": "2024-03-27T08:42:31.744049Z",
+     "start_time": "2024-03-27T08:42:31.275195Z"
     }
    },
    "id": "b2259c973361b92a",
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -63,7 +53,7 @@
      "data": {
       "text/plain": "label\n1    33.844519\n0    29.074948\n3    13.751383\n4    11.446970\n2     8.290128\n5     3.592053\nName: count, dtype: float64"
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,12 +65,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T06:59:35.607960Z",
-     "start_time": "2024-03-23T06:59:35.601222Z"
+     "end_time": "2024-03-27T08:42:32.827295Z",
+     "start_time": "2024-03-27T08:42:32.820380Z"
     }
    },
    "id": "dfac5105c634707d",
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -92,12 +82,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T06:59:37.381552Z",
-     "start_time": "2024-03-23T06:59:36.714722Z"
+     "end_time": "2024-03-27T08:42:36.457751Z",
+     "start_time": "2024-03-27T08:42:36.440591Z"
     }
    },
    "id": "5dcd8c0adb9c7a6a",
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -107,7 +97,7 @@
       "text/plain": "                                                     text  label\n0           i just feel really helpless and heavy hearted      4\n1       ive enjoyed being able to slouch about relax a...      0\n2       i gave up my internship with the dmrg and am f...      4\n3                              i dont know i feel so lost      0\n4       i am a kindergarten teacher and i am thoroughl...      4\n...                                                   ...    ...\n416804  i feel like telling these horny devils to find...      2\n416805  i began to realize that when i was feeling agi...      3\n416806  i feel very curious be why previous early dawn...      5\n416807  i feel that becuase of the tyranical nature of...      3\n416808  i think that after i had spent some time inves...      5\n\n[416809 rows x 2 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>i just feel really helpless and heavy hearted</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ive enjoyed being able to slouch about relax a...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>i gave up my internship with the dmrg and am f...</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>i dont know i feel so lost</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>i am a kindergarten teacher and i am thoroughl...</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>416804</th>\n      <td>i feel like telling these horny devils to find...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>416805</th>\n      <td>i began to realize that when i was feeling agi...</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>416806</th>\n      <td>i feel very curious be why previous early dawn...</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>416807</th>\n      <td>i feel that becuase of the tyranical nature of...</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>416808</th>\n      <td>i think that after i had spent some time inves...</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>416809 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,26 +109,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T05:22:21.185031Z",
-     "start_time": "2024-03-23T05:22:21.179808Z"
+     "end_time": "2024-03-27T08:42:37.133143Z",
+     "start_time": "2024-03-27T08:42:37.126753Z"
     }
    },
    "id": "7deca1fc0139fb57",
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: [text, label]\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# проверим наличие верхнего регистра в тексте\n",
     "mask_uppercase = df['text'].str.isupper()\n",
     "df[mask_uppercase]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T08:42:40.007787Z",
+     "start_time": "2024-03-27T08:42:39.961543Z"
+    }
    },
    "id": "37bed8a4e41295dc",
-   "execution_count": null
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -151,14 +155,26 @@
     "    return mentions"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T08:42:40.210860Z",
+     "start_time": "2024-03-27T08:42:40.208702Z"
+    }
    },
    "id": "8a469c236eb67a7a",
-   "execution_count": null
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "mentions = []\n",
     "for twit in df['text']:\n",
@@ -168,10 +184,14 @@
     "print(mentions)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T08:42:41.524743Z",
+     "start_time": "2024-03-27T08:42:41.300899Z"
+    }
    },
    "id": "4e41c54d5ea1ea18",
-   "execution_count": null
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -286,10 +306,14 @@
     "nlp = spacy.load(\"en_core_web_sm\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T08:42:50.641647Z",
+     "start_time": "2024-03-27T08:42:50.342799Z"
+    }
    },
    "id": "192c742c37b177aa",
-   "execution_count": null
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -301,10 +325,14 @@
     "    return [token.lemma_ for token in doc if not token.is_stop]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T08:42:52.498456Z",
+     "start_time": "2024-03-27T08:42:52.495672Z"
+    }
    },
    "id": "495ddae0b3c06e44",
-   "execution_count": null
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -318,24 +346,41 @@
     "    tokenized_text.append(token)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T09:16:08.837983Z",
+     "start_time": "2024-03-27T08:42:53.259727Z"
+    }
    },
    "id": "a3993816de65e484",
-   "execution_count": null
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "# Сохранение списка в файл\n",
-    "with open('..data/tokenized_text.pkl', 'wb') as f:\n",
+    "with open('../data/tokenized_text.pkl', 'wb') as f:\n",
     "    pickle.dump(tokenized_text, f)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T09:19:13.160202Z",
+     "start_time": "2024-03-27T09:19:12.516333Z"
+    }
    },
    "id": "dcecd9e5322b0cbd",
-   "execution_count": null
+   "execution_count": 16
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fd5627c4159b1466"
   }
  ],
  "metadata": {
