--- a/notebooks/data_loading_and_preprocessing.ipynb
+++ b/notebooks/data_loading_and_preprocessing.ipynb
@@ -2,26 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:30.908577Z",
-     "start_time": "2024-03-27T08:42:30.906488Z"
+     "end_time": "2024-04-06T08:11:16.893926Z",
+     "start_time": "2024-04-06T08:11:16.891047Z"
     }
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import spacy\n",
     "import re\n",
     "import pickle"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Ознакомимся с нашим набором данных\n",
     "df = pd.read_csv('../data/text.csv')"
@@ -29,11 +28,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:31.744049Z",
-     "start_time": "2024-03-27T08:42:31.275195Z"
+     "end_time": "2024-04-06T08:11:17.384057Z",
+     "start_time": "2024-04-06T08:11:16.923195Z"
     }
    },
    "id": "b2259c973361b92a",
+   "outputs": [],
    "execution_count": 5
   },
   {
@@ -48,16 +48,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "label\n1    33.844519\n0    29.074948\n3    13.751383\n4    11.446970\n2     8.290128\n5     3.592053\nName: count, dtype: float64"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# проверим соотношение классов\n",
     "df['label'].value_counts() / len(df['label']) * 100"
@@ -65,70 +55,173 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:32.827295Z",
-     "start_time": "2024-03-27T08:42:32.820380Z"
+     "end_time": "2024-04-06T08:11:17.390855Z",
+     "start_time": "2024-04-06T08:11:17.385273Z"
     }
    },
    "id": "dfac5105c634707d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "1    33.844519\n",
+       "0    29.074948\n",
+       "3    13.751383\n",
+       "4    11.446970\n",
+       "2     8.290128\n",
+       "5     3.592053\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 6
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "# так как производительности моего компьютера не хватает для обработки такого количества данных, я возьму только 10% данных с таким-же соотношением классов\n",
-    "df = df.drop(['Unnamed: 0'], axis=1)"
-   ],
+   "source": "df = df.drop(['Unnamed: 0'], axis=1)",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:36.457751Z",
-     "start_time": "2024-03-27T08:42:36.440591Z"
+     "end_time": "2024-04-06T08:11:17.402445Z",
+     "start_time": "2024-04-06T08:11:17.391855Z"
     }
    },
    "id": "5dcd8c0adb9c7a6a",
+   "outputs": [],
    "execution_count": 7
   },
   {
    "cell_type": "code",
+   "source": [
+    "# мой сет с которым я буду работать\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-06T08:11:17.408711Z",
+     "start_time": "2024-04-06T08:11:17.404175Z"
+    }
+   },
+   "id": "7deca1fc0139fb57",
    "outputs": [
     {
      "data": {
-      "text/plain": "                                                     text  label\n0           i just feel really helpless and heavy hearted      4\n1       ive enjoyed being able to slouch about relax a...      0\n2       i gave up my internship with the dmrg and am f...      4\n3                              i dont know i feel so lost      0\n4       i am a kindergarten teacher and i am thoroughl...      4\n...                                                   ...    ...\n416804  i feel like telling these horny devils to find...      2\n416805  i began to realize that when i was feeling agi...      3\n416806  i feel very curious be why previous early dawn...      5\n416807  i feel that becuase of the tyranical nature of...      3\n416808  i think that after i had spent some time inves...      5\n\n[416809 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>i just feel really helpless and heavy hearted</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ive enjoyed being able to slouch about relax a...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>i gave up my internship with the dmrg and am f...</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>i dont know i feel so lost</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>i am a kindergarten teacher and i am thoroughl...</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>416804</th>\n      <td>i feel like telling these horny devils to find...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>416805</th>\n      <td>i began to realize that when i was feeling agi...</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>416806</th>\n      <td>i feel very curious be why previous early dawn...</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>416807</th>\n      <td>i feel that becuase of the tyranical nature of...</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>416808</th>\n      <td>i think that after i had spent some time inves...</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>416809 rows × 2 columns</p>\n</div>"
+      "text/plain": [
+       "                                                     text  label\n",
+       "0           i just feel really helpless and heavy hearted      4\n",
+       "1       ive enjoyed being able to slouch about relax a...      0\n",
+       "2       i gave up my internship with the dmrg and am f...      4\n",
+       "3                              i dont know i feel so lost      0\n",
+       "4       i am a kindergarten teacher and i am thoroughl...      4\n",
+       "...                                                   ...    ...\n",
+       "416804  i feel like telling these horny devils to find...      2\n",
+       "416805  i began to realize that when i was feeling agi...      3\n",
+       "416806  i feel very curious be why previous early dawn...      5\n",
+       "416807  i feel that becuase of the tyranical nature of...      3\n",
+       "416808  i think that after i had spent some time inves...      5\n",
+       "\n",
+       "[416809 rows x 2 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i just feel really helpless and heavy hearted</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ive enjoyed being able to slouch about relax a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>i gave up my internship with the dmrg and am f...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>i dont know i feel so lost</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>i am a kindergarten teacher and i am thoroughl...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416804</th>\n",
+       "      <td>i feel like telling these horny devils to find...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416805</th>\n",
+       "      <td>i began to realize that when i was feeling agi...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416806</th>\n",
+       "      <td>i feel very curious be why previous early dawn...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416807</th>\n",
+       "      <td>i feel that becuase of the tyranical nature of...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416808</th>\n",
+       "      <td>i think that after i had spent some time inves...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>416809 rows × 2 columns</p>\n",
+       "</div>"
+      ]
      },
      "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# мой сабсет с которым я буду работать\n",
-    "df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:37.133143Z",
-     "start_time": "2024-03-27T08:42:37.126753Z"
-    }
-   },
-   "id": "7deca1fc0139fb57",
    "execution_count": 8
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Empty DataFrame\nColumns: [text, label]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# проверим наличие верхнего регистра в тексте\n",
     "mask_uppercase = df['text'].str.isupper()\n",
@@ -137,16 +230,57 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:40.007787Z",
-     "start_time": "2024-03-27T08:42:39.961543Z"
+     "end_time": "2024-04-06T08:11:17.443313Z",
+     "start_time": "2024-04-06T08:11:17.409523Z"
     }
    },
    "id": "37bed8a4e41295dc",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [text, label]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 9
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# проверим наличие упоминаний пользователей. Сначала создам функцию\n",
     "def check_user_mentions(text):\n",
@@ -157,24 +291,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:40.210860Z",
-     "start_time": "2024-03-27T08:42:40.208702Z"
+     "end_time": "2024-04-06T08:11:17.446284Z",
+     "start_time": "2024-04-06T08:11:17.444177Z"
     }
    },
    "id": "8a469c236eb67a7a",
+   "outputs": [],
    "execution_count": 10
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
    "source": [
     "mentions = []\n",
     "for twit in df['text']:\n",
@@ -186,16 +312,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:41.524743Z",
-     "start_time": "2024-03-27T08:42:41.300899Z"
+     "end_time": "2024-04-06T08:11:17.660901Z",
+     "start_time": "2024-04-06T08:11:17.447019Z"
     }
    },
    "id": "4e41c54d5ea1ea18",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "execution_count": 11
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Исправляю сокращённые формы, которые могут быть неправильно обработаны токенизатором и лемматизатором spaCy\n",
     "def expand_contractions(text):\n",
@@ -280,27 +414,35 @@
     "    return text"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-06T08:11:17.667339Z",
+     "start_time": "2024-04-06T08:11:17.661899Z"
+    }
    },
    "id": "43f8031edb212b2b",
-   "execution_count": null
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Применяю функцию. Сохраняю результат в тот же датасет, заменив оригинальные данные обработанными\n",
     "df['text'] = df['text'].apply(expand_contractions)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-06T08:12:17.735740Z",
+     "start_time": "2024-04-06T08:11:17.668254Z"
+    }
    },
    "id": "7e34c731b01a3842",
-   "execution_count": null
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# для удаления стоп-слов и токенизации буду использовать пакет SpaCy\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
@@ -308,16 +450,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:50.641647Z",
-     "start_time": "2024-03-27T08:42:50.342799Z"
+     "end_time": "2024-04-06T08:12:18.061253Z",
+     "start_time": "2024-04-06T08:12:17.737844Z"
     }
    },
    "id": "192c742c37b177aa",
-   "execution_count": 12
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# определяю функцию, которая будет возвращать леммы без стоп-слов\n",
     "def process_text_with_spacy(text):\n",
@@ -327,16 +469,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T08:42:52.498456Z",
-     "start_time": "2024-03-27T08:42:52.495672Z"
+     "end_time": "2024-04-06T08:12:18.064193Z",
+     "start_time": "2024-04-06T08:12:18.062003Z"
     }
    },
    "id": "495ddae0b3c06e44",
-   "execution_count": 13
+   "outputs": [],
+   "execution_count": 15
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# вызываю написанную выше функцию и получаю список списков с обработанным текстом\n",
     "tokenized_text = []\n",
@@ -348,16 +490,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T09:16:08.837983Z",
-     "start_time": "2024-03-27T08:42:53.259727Z"
+     "end_time": "2024-04-06T08:45:16.723389Z",
+     "start_time": "2024-04-06T08:12:18.065175Z"
     }
    },
    "id": "a3993816de65e484",
-   "execution_count": 14
+   "outputs": [],
+   "execution_count": 16
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "# Сохранение списка в файл\n",
     "with open('../data/tokenized_text.pkl', 'wb') as f:\n",
@@ -366,21 +508,27 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T09:19:13.160202Z",
-     "start_time": "2024-03-27T09:19:12.516333Z"
+     "end_time": "2024-04-06T08:45:17.330072Z",
+     "start_time": "2024-04-06T08:45:16.724237Z"
     }
    },
    "id": "dcecd9e5322b0cbd",
-   "execution_count": 16
+   "outputs": [],
+   "execution_count": 17
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-06T08:45:17.332139Z",
+     "start_time": "2024-04-06T08:45:17.330794Z"
+    }
    },
-   "id": "fd5627c4159b1466"
+   "id": "fd5627c4159b1466",
+   "outputs": [],
+   "execution_count": 17
   }
  ],
  "metadata": {
