--- a/notebooks/dense_model_with_emb_text.ipynb
+++ b/notebooks/dense_model_with_emb_text.ipynb
@@ -28,6 +28,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "# Load document vectors and labels tensors from specified files\n",
     "document_vectors_tensor = torch.load('../data/document_vectors_emb_tensor.pt')\n",
     "labels_tensor = torch.load('../data/labels_emb_tensor.pt')"
    ],
@@ -45,7 +46,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Делю данные на тренировочные и тестовые/валидационные\n",
+    "# Splitting data into training and test/validation sets\n",
     "train_data, test_val_data, train_labels, test_val_labels = train_test_split(document_vectors_tensor, labels_tensor, train_size=0.7, random_state=24, stratify=labels_tensor)"
    ],
    "metadata": {
@@ -62,7 +63,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Разделяю тестовые/валидационные на тестовые и валидационные\n",
+    "# Further splitting the test/validation data into test and validation sets\n",
     "test_data, val_data, test_labels, val_labels = train_test_split(test_val_data, test_val_labels, train_size=0.5, random_state=24, stratify=test_val_labels)"
    ],
    "metadata": {
@@ -79,7 +80,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Стандартизую данные\n",
+    "# Standardizing the data\n",
     "mean = torch.mean(train_data, dim=0)\n",
     "std = torch.std(train_data, dim=0)\n",
     "train_data = (train_data - mean) / std\n",
@@ -100,16 +101,17 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Создаю измерение батчей\n",
+    "# Creating datasets\n",
     "train_dataset = TensorDataset(train_data, train_labels)\n",
     "val_dataset = TensorDataset(val_data, val_labels)\n",
     "test_dataset = TensorDataset(test_data, test_labels)\n",
     "\n",
     "batch_size = 64\n",
     "\n",
+    "# Creating data loaders for training, validation, and testing\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=batch_size)"
+    "test_loader = DataLoader(test_dataset, batch_size=batch_size)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -125,25 +127,25 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import torch.nn.functional as F\n",
-    "\n",
     "class SeqModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.fc1 = nn.Linear(100, 128)\n",
-    "        self.fc2 = nn.Linear(128, 64)\n",
-    "        self.fc3 = nn.Linear(64, 6)\n",
-    "        self.act = nn.ReLU()\n",
-    "        self.dropout = nn.Dropout(p=0.2)  # Здесь p - вероятность обнуления\n",
+    "        # Define the neural network layers\n",
+    "        self.fc1 = nn.Linear(100, 128)  # Input size: 100, Output size: 128\n",
+    "        self.fc2 = nn.Linear(128, 64)   # Input size: 128, Output size: 64\n",
+    "        self.fc3 = nn.Linear(64, 6)     # Input size: 64, Output size: 6\n",
+    "        self.act = nn.ReLU()            # Activation function: ReLU\n",
+    "        self.dropout = nn.Dropout(p=0.2)  # Dropout layer with a dropout probability of 0.2 (p)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        out = self.fc1(x)\n",
-    "        out = self.act(out)\n",
-    "        out = self.fc2(out)\n",
-    "        out = self.act(out)\n",
-    "        out = self.fc3(out)\n",
+    "        # Forward pass through the network\n",
+    "        out = self.fc1(x)    # Input x is passed through the first fully connected layer\n",
+    "        out = self.act(out)  # Activation function applied\n",
+    "        out = self.fc2(out)  # Output of the first layer passed through the second fully connected layer\n",
+    "        out = self.act(out)  # Activation function applied\n",
+    "        out = self.fc3(out)  # Output of the second layer passed through the third fully connected layer\n",
     "\n",
-    "        return out"
+    "        return out\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -185,7 +187,6 @@
     "            avg_val_loss = val_loss / len(val_loader)\n",
     "            val_losses.append(avg_val_loss)\n",
     "\n",
-    "        # Вывод средней потери на каждой эпохе\n",
     "        if epoch == 0 or (epoch + 1) % 10 == 0:\n",
     "            print('{} Epoch {}, Training loss: {:.4f}'.format(\n",
     "                datetime.datetime.now(), epoch + 1, avg_loss_train))\n",
