documented the code

--- a/notebooks/text_embedding.ipynb
+++ b/notebooks/text_embedding.ipynb
@@ -23,6 +23,7 @@
   {
    "cell_type": "code",
    "source": [
+    "# Read the CSV file into a DataFrame\n",
     "df = pd.read_csv('../data/text.csv')"
    ],
    "metadata": {
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Загрузка списка из файла\n",
+    "# Load the tokenized text from the pickle file\n",
     "with open('../data/tokenized_text.pkl', 'rb') as f:\n",
     "    tokenized_text = pickle.load(f)"
    ],
@@ -57,9 +58,11 @@
   {
    "cell_type": "code",
    "source": [
-    "# буду использовать word2vec для эмбеддинга\n",
+    "# Using Word2Vec for word embedding\n",
     "w2v_model = Word2Vec(tokenized_text, vector_size=100, workers=4)\n",
-    "# Получу векторные представления слов для каждого документа и усредняю веркторы в документе. Сохраняю индексы документов, для которых не нашлось векторных представлений слов\n",
+    "\n",
+    "# Get word vector representations for each document and average the vectors in each document.\n",
+    "# Save the indexes of documents for which word vector representations were not found.\n",
     "empty_doc_indexes = []\n",
     "document_vectors = []\n",
     "for index, document in enumerate(tokenized_text):\n",
@@ -85,7 +88,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Удалю метки для документов, слова в которых не получили векторное представление\n",
+    "# Convert labels to list and remove labels corresponding to empty documents\n",
     "labels_list = df['label'].values.tolist()\n",
     "for index in sorted(empty_doc_indexes, reverse=True):\n",
     "    labels_list.pop(index)"
@@ -104,9 +107,11 @@
   {
    "cell_type": "code",
    "source": [
-    "# Создаю тензоры для данных и их меток\n",
+    "# Convert document vectors to numpy array and then to tensor\n",
     "document_vectors_np = np.array(document_vectors)\n",
     "document_vectors_tensor = torch.tensor(document_vectors_np)\n",
+    "\n",
+    "# Convert labels to tensor\n",
     "labels_tensor = torch.tensor(labels_list)"
    ],
    "metadata": {
@@ -123,6 +128,7 @@
   {
    "cell_type": "code",
    "source": [
+    "# Save document vectors tensor and labels tensor to files\n",
     "torch.save(document_vectors_tensor, '../data/document_vectors_emb_tensor.pt')\n",
     "torch.save(labels_tensor, '../data/labels_emb_tensor.pt')"
    ],
@@ -134,20 +140,6 @@
     }
    },
    "id": "578c96e3fff28b47",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "cell_type": "code",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-09T07:09:45.510699Z",
-     "start_time": "2024-04-09T07:09:45.509266Z"
-    }
-   },
-   "id": "303ec9a05bdc69e9",
    "outputs": [],
    "execution_count": 7
   }
