--- a/notebooks/data_loading_and_preprocessing.ipynb
+++ b/notebooks/data_loading_and_preprocessing.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Ознакомимся с нашим набором данных\n",
+    "# Read the CSV file into a DataFrame\n",
     "df = pd.read_csv('../data/text.csv')"
    ],
    "metadata": {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# проверим соотношение классов\n",
+    "# Calculate the percentage of each label in the DataFrame\n",
     "df['label'].value_counts() / len(df['label']) * 100"
    ],
    "metadata": {
@@ -83,7 +83,10 @@
   },
   {
    "cell_type": "code",
-   "source": "df = df.drop(['Unnamed: 0'], axis=1)",
+   "source": [
+    "# Drop the 'Unnamed: 0' column from the DataFrame\n",
+    "df = df.drop(['Unnamed: 0'], axis=1)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
@@ -98,132 +101,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# мой сет с которым я буду работать\n",
-    "df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-06T08:11:17.408711Z",
-     "start_time": "2024-04-06T08:11:17.404175Z"
-    }
-   },
-   "id": "7deca1fc0139fb57",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                                                     text  label\n",
-       "0           i just feel really helpless and heavy hearted      4\n",
-       "1       ive enjoyed being able to slouch about relax a...      0\n",
-       "2       i gave up my internship with the dmrg and am f...      4\n",
-       "3                              i dont know i feel so lost      0\n",
-       "4       i am a kindergarten teacher and i am thoroughl...      4\n",
-       "...                                                   ...    ...\n",
-       "416804  i feel like telling these horny devils to find...      2\n",
-       "416805  i began to realize that when i was feeling agi...      3\n",
-       "416806  i feel very curious be why previous early dawn...      5\n",
-       "416807  i feel that becuase of the tyranical nature of...      3\n",
-       "416808  i think that after i had spent some time inves...      5\n",
-       "\n",
-       "[416809 rows x 2 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>i just feel really helpless and heavy hearted</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ive enjoyed being able to slouch about relax a...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>i gave up my internship with the dmrg and am f...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>i dont know i feel so lost</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>i am a kindergarten teacher and i am thoroughl...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416804</th>\n",
-       "      <td>i feel like telling these horny devils to find...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416805</th>\n",
-       "      <td>i began to realize that when i was feeling agi...</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416806</th>\n",
-       "      <td>i feel very curious be why previous early dawn...</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416807</th>\n",
-       "      <td>i feel that becuase of the tyranical nature of...</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416808</th>\n",
-       "      <td>i think that after i had spent some time inves...</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>416809 rows × 2 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "# проверим наличие верхнего регистра в тексте\n",
+    "# Filter rows where the text is all uppercase\n",
     "mask_uppercase = df['text'].str.isupper()\n",
     "df[mask_uppercase]"
    ],
@@ -282,7 +160,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# проверим наличие упоминаний пользователей. Сначала создам функцию\n",
+    "# Define a function to check user mentions in text\n",
     "def check_user_mentions(text):\n",
     "    pattern = r'@(\\w+)'\n",
     "    mentions = re.findall(pattern, text)\n",
@@ -302,6 +180,7 @@
   {
    "cell_type": "code",
    "source": [
+    "# Find tweets containing user mentions\n",
     "mentions = []\n",
     "for twit in df['text']:\n",
     "    if len(check_user_mentions(twit)) > 0:\n",
@@ -331,7 +210,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Исправляю сокращённые формы, которые могут быть неправильно обработаны токенизатором и лемматизатором spaCy\n",
+    "# Define a function to expand contractions in text\n",
     "def expand_contractions(text):\n",
     "    contractions = {\n",
     "        \"im\": \"i am\",\n",
@@ -427,7 +306,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Применяю функцию. Сохраняю результат в тот же датасет, заменив оригинальные данные обработанными\n",
+    "# Apply the expand_contractions function to the 'text' column of the DataFrame\n",
     "df['text'] = df['text'].apply(expand_contractions)"
    ],
    "metadata": {
@@ -444,7 +323,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# для удаления стоп-слов и токенизации буду использовать пакет SpaCy\n",
+    "# Load the English language model from spaCy\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ],
    "metadata": {
@@ -461,7 +340,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# определяю функцию, которая будет возвращать леммы без стоп-слов\n",
+    "# Define a function to process text using spaCy\n",
     "def process_text_with_spacy(text):\n",
     "    doc = nlp(text)\n",
     "    return [token.lemma_ for token in doc if not token.is_stop]"
@@ -480,7 +359,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# вызываю написанную выше функцию и получаю список списков с обработанным текстом\n",
+    "# Tokenize the text in the DataFrame using spaCy\n",
     "tokenized_text = []\n",
     "\n",
     "for text in df['text']:\n",
@@ -501,7 +380,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Сохранение списка в файл\n",
+    "# Save the tokenized text to a pickle file\n",
     "with open('../data/tokenized_text.pkl', 'wb') as f:\n",
     "    pickle.dump(tokenized_text, f)"
    ],
